--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -12,8 +12,8 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<Layout 
-  title={`${title} | Centro Espiritual`}
+<Layout
+  title={`${title} | StarsDogs`}
   description={description}
 >
   <main class="blog blog--dark">
