--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'components/whatsapp';
 @use 'components/blog-card';
 @use 'components/service-card';
+@use 'components/teckel-colors';
 @use 'sections/hero';
 @use 'sections/services';
 @use 'sections/services-page';
