--- a/src/layouts/ServiceLayout.astro
+++ b/src/layouts/ServiceLayout.astro
@@ -11,8 +11,8 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<Layout 
-  title={`${title} | Centro Espiritual`}
+<Layout
+  title={`${title} | StarsDogs`}
   description={description}
 >
   <main class="service service--dark">
