--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -14,20 +14,20 @@ const { post } = Astro.props;
 
 const schema = {
   "@context": "https://schema.org",
-  "@type": "BlogPosting",
+  "@type": "Article",
   "headline": post.title,
   "image": post.image,
   "datePublished": post.date,
   "author": {
     "@type": "Organization",
-    "name": "Centro Espiritual"
+    "name": "StarsDogs"
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Centro Espiritual",
+    "name": "StarsDogs",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://centroespiritual.com/logo.png"
+      "url": "/images/logo.png"
     }
   },
   "description": post.excerpt
@@ -40,7 +40,7 @@ const schema = {
   ogImage={post.image}
 >
   <script type="application/ld+json" set:html={JSON.stringify(schema)} />
-  
+
   <article class="blog-post">
     <header class="blog-post__header">
       <div class="blog-post__meta">
@@ -55,8 +55,8 @@ const schema = {
         <span class="blog-post__read-time">{post.readTime}</span>
       </div>
       <h1 class="blog-post__title">{post.title}</h1>
-      <img 
-        src={post.image} 
+      <img
+        src={post.image}
         alt={post.title}
         class="blog-post__image"
         width="1200"
@@ -72,7 +72,7 @@ const schema = {
       <div class="blog-post__share">
         <h3>Comparte este artículo</h3>
         <div class="blog-post__social">
-          <a 
+          <a
             href={`https://www.facebook.com/sharer/sharer.php?u=${Astro.url}`}
             target="_blank"
             rel="noopener noreferrer"
@@ -80,7 +80,7 @@ const schema = {
           >
             Facebook
           </a>
-          <a 
+          <a
             href={`https://twitter.com/intent/tweet?url=${Astro.url}&text=${encodeURIComponent(post.title)}`}
             target="_blank"
             rel="noopener noreferrer"
@@ -88,7 +88,7 @@ const schema = {
           >
             Twitter
           </a>
-          <a 
+          <a
             href={`https://wa.me/?text=${encodeURIComponent(`${post.title} ${Astro.url}`)}`}
             target="_blank"
             rel="noopener noreferrer"
