--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,7 @@ $primary: #FF4B4B;
 $secondary: #4B4BFF;
 $text: #FFFFFF;
 $light: #FFFFFF;
-$dark: #0A0A0A;
+$dark: #1A2A40;
 $dark-gradient: linear-gradient(to bottom, rgba(10,10,10,0.97), rgba(20,20,20,0.95));
 $glass-bg: rgba(15,15,15,0.8);
 $glass-border: rgba(255,255,255,0.1);
