--- a/src/components/TeckelColors.astro
+++ b/src/components/TeckelColors.astro
@@ -1,23 +1,25 @@
 ---
 ---
 
-<section class="teckel-colors">
+<section class="teckel-colors" id="colores">
   <div class="teckel-colors__section">
-    <h2 class="teckel-colors__title">Colores del Teckel</h2>
-    <div class="teckel-colors__carousel">
-      <img class="teckel-colors__image" src="/images/cachorros/teckel_01.jpg" alt="Teckel color marrón" />
-      <img class="teckel-colors__image" src="/images/cachorros/teckel_02.jpg" alt="Teckel color negro y fuego" />
-      <img class="teckel-colors__image" src="/images/cachorros/teckel_03.jpg" alt="Teckel color crema" />
-      <img class="teckel-colors__image" src="/images/cachorros/teckel_04.jpg" alt="Teckel color chocolate" />
+    <div class="teckel-colors__info">
+      <h2 class="teckel-colors__title">Csonoce los Colores del Teckel</h2>
+      <p class="teckel-colors__description">
+        Los Teckel vienen en una variedad de hermosos colores y patrones. Desde el clásico rojo hasta el elegante negro y fuego, 
+        cada color tiene su encanto único. Descubre la diversidad de esta maravillosa raza y encuentra el compañero perfecto 
+        para tu hogar.
+      </p>
+      <a href="/blog/razas-teckel" class="btn btn--primary">Conoce más sobre la raza</a>
     </div>
-  </div>
-  <div class="teckel-colors__section">
-    <h2 class="teckel-colors__title">Conoce más sobre el perro salchicha Teckel</h2>
-    <p class="teckel-colors__description">
-      El Dachshund que traduce en Alemán perro tejón es también llamado Teckel, Dackel o perro salchicha. 
-      Se trata de un perro de baja estatura y de contextura alargada, es sumamente divertido y llamativo 
-      en los paseos cotidianos por su fenotipo...
-    </p>
-    <a href="/blog/razas-teckel" class="btn btn--primary">Más información</a>
+    
+    <div class="teckel-colors__gallery">
+      <div class="teckel-colors__carousel">
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_01.jpg" alt="Teckel color rojo" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_02.jpg" alt="Teckel negro y fuego" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_03.jpg" alt="Teckel chocolate" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_04.jpg" alt="Teckel crema" loading="lazy" />
+      </div>
+    </div>
   </div>
 </section>
