--- a/src/components/TeckelColors.astro
+++ b/src/components/TeckelColors.astro
@@ -15,10 +15,12 @@
     
     <div class="teckel-colors__gallery">
       <div class="teckel-colors__carousel">
-        <img class="teckel-colors__image" src="/images/cachorros/teckel_01.jpg" alt="Teckel color rojo" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_03.jpg" alt="Teckel color rojo" loading="lazy" />
         <img class="teckel-colors__image" src="/images/cachorros/teckel_02.jpg" alt="Teckel negro y fuego" loading="lazy" />
-        <img class="teckel-colors__image" src="/images/cachorros/teckel_03.jpg" alt="Teckel chocolate" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_14.jpg" alt="Teckel chocolate" loading="lazy" />
         <img class="teckel-colors__image" src="/images/cachorros/teckel_04.jpg" alt="Teckel crema" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_09.jpg" alt="Teckel crema" loading="lazy" />
+        <img class="teckel-colors__image" src="/images/cachorros/teckel_06.jpg" alt="Teckel crema" loading="lazy" />
       </div>
     </div>
   </div>
